--- a/.github/workflows/daily-commit.yml
+++ b/.github/workflows/daily-commit.yml
@@ -3,7 +3,8 @@ name: Daily Auto Commit
 on:
   schedule:
     # Run daily at 03:10 UTC (for example)
-    - cron: '10 3 * * *'
+    - cron: '*/5 * * * *'
+
   workflow_dispatch:  # allow manual triggering
 
 jobs:
